--- a/packages/interwovenkit-react/src/pages/wallet/tabs/assets/AssetGroup.module.css
+++ b/packages/interwovenkit-react/src/pages/wallet/tabs/assets/AssetGroup.module.css
@@ -37,7 +37,7 @@
   font-size: 14px;
   font-weight: 600;
   color: var(--gray-0);
-  max-width: 120px;
+  width: 120px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
